Seatch for the specified llvm config binaries
Include add libs from llvm for now

Simplified example, we will start simple and grow from there

git-svn-id: http://svn.fmi-plovdiv.org/svn/students/0901261034/trunk/MTProject@8 12c2f946-5e95-4fc4-9837-bc5cc44074e2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,23 @@
 project(dragonc)
 cmake_minimum_required(VERSION 2.6)
 
-execute_process(COMMAND llvm-config --cppflags
+
+
+find_program(LLVM_CONFIG NAMES  llvm-config llvm-config-3.1 /usr/bin)
+
+
+if(NOT EXISTS ${LLVM_CONFIG})
+        message(FATAL_ERROR ${LLVM_CONFIG})
+endif()
+
+execute_process(COMMAND ${LLVM_CONFIG} --cppflags
                 OUTPUT_VARIABLE LLVM_FLAGS)
 
-execute_process(COMMAND llvm-config --ldflags
+execute_process(COMMAND ${LLVM_CONFIG} --ldflags
                 OUTPUT_STRIP_TRAILING_WHITESPACE      
                 OUTPUT_VARIABLE LLVM_LD_FLAGS)
 
-execute_process(COMMAND llvm-config --libs core
+execute_process(COMMAND ${LLVM_CONFIG} --libs 
                 OUTPUT_STRIP_TRAILING_WHITESPACE      
                 OUTPUT_VARIABLE LLVM_LIBS)
 
